results explanation overflow fixed

--- a/styles/ResultsExplanation.module.css
+++ b/styles/ResultsExplanation.module.css
@@ -2,7 +2,7 @@
     margin-left: 3rem;
     /* margin-top: 4rem; */
     max-height: 382px;
-    max-width: 600px;
+    min-width: 600px;
     border: 2px solid #444444;
     border-radius: 25px;
     padding: 2rem;
@@ -119,6 +119,7 @@
     .resultExplanation {
       margin-top: 3rem;
       max-height: unset;
+      min-width: unset;
     }
   
   }
